--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -24,7 +24,9 @@
             crossorigin="anonymous"></script>
   </head>
   <body>
-  <h1><%= title %> (<%= username %>)</h1>
+  <div class="form-group">
+    <h1><%= title %> (<%= username %>)</h1>
+  </div>
   <div class="form-group" id="div-no-register">
     <h5>You are not currently registered for any modules.</h5>
   </div>
