--- a/views/lecture_slot.ejs
+++ b/views/lecture_slot.ejs
@@ -109,6 +109,7 @@
           <td>
             <!-- TODO: Add functionality for the DELETE button to delete the row -->
             <input type="button" id="btn-delete-lecture" value="Delete"/>
+            <input type="button" id="btn-update-lecture" value="Update"/>
           </td>
         </tr>
         <% j++; %>
@@ -116,6 +117,54 @@
       </tbody>
     </table>
   </div>
+
+  <form action="/update" method="post">
+    <div class="modal fade" id="EditModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="mod_code">Module</label>
+              <input type="text" disabled="true" id="mod_code" class="form-control" placeholder="Module Code" >
+            </div>
+
+            <div class="form-group">
+              <label for="day">Day</label>
+              <input type="text" name="day" class="form-control" placeholder="Day" required>
+            </div>
+
+            <div class="form-group">
+              <label for="s_time_lect">Start Time</label>
+              <input type="text" name="s_time_lect" class="form-control" placeholder="Start Time" required>
+            </div>
+
+            <div class="form-group">
+              <label for="e_time_lect">End Time</label>
+              <input type="text" name="e_time_lect" class="form-control" placeholder="End Time" required>
+            </div>
+
+            <div class="form-group">
+              <label for="quota">Quota</label>
+              <input type="text" name="quota" class="form-control" placeholder="Quota" required>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <input type="hidden" name="sem">
+            <input type="hidden" name="index">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
   <div class="form-group">
     <button type="submit" class="btn btn-primary"
             onclick="window.location.href='dashboard_admin'">Back to Home</button>
@@ -142,6 +191,31 @@
               '&e_time_lect=' + e_time_lect;
     });
   </script>
+
+  <script>
+    $(document).ready(function(){
+      //showing data to edit modal
+      $('#table-lectures').on('click','#btn-update-lecture',function(){
+        const currentRow = $(this).closest("tr"); // get the current row
+        const index = currentRow.find("td:eq(0)").text();
+        const mod_code = currentRow.find("td:eq(1)").text(); // get current row 2nd TD
+        const sem = currentRow.find("td:eq(2)").text();
+        const day = currentRow.find("td:eq(3)").text();
+        const s_time_lect = currentRow.find("td:eq(4)").text();
+        const e_time_lect = currentRow.find("td:eq(5)").text();
+        const quota = currentRow.find("td:eq(6)").text();
+      $('#EditModal').modal('show');
+      $('.index').val(index);
+      $('#mod_code').val(mod_code);
+      $('.sem').val(sem);
+      $('.day').val(day);
+      $('.s_time_lect').val(s_time_lect);
+      $('.e_time_lect').val(e_time_lect);
+      $('.quota').val(quota);
+    });
+    });
+  </script>
+
   <script>
     (function() {
       window.addEventListener('load', function() {
