--- a/views/register.ejs
+++ b/views/register.ejs
@@ -67,6 +67,9 @@
         <option value="5">Year 5</option>
       </select>
     </div>
+    <div class="form-group text-center">
+      <a class="d-block small mt-3" href="/login">Return to login</a>
+    </div>
     <div>
       <button type="submit" class="btn btn-primary btn-block">Submit</button>
     </div>
