--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -69,6 +69,13 @@
             onclick="window.location.href='dashboard_admin/allocate'">Allocate</button>
   </div>
   <div class="form-group">
+    <% if(err_msg !== ""){ %>
+      <label style="color: #721c24"><%= err_msg%></label>
+    <% } else{ %>
+      <label></label>
+    <% } %>
+  </div>
+  <div class="form-group">
     <button type="submit" class="btn btn-primary"
             onclick="window.location.href='program'">Program</button>
   </div>
