--- a/views/login.ejs
+++ b/views/login.ejs
@@ -51,6 +51,13 @@
     <div>
       <button type="submit" class="btn btn-primary btn-block">Submit</button>
     </div>
+    <div class="form-group">
+      <% if(round_time_err !== ""){ %>
+        <label style="color: #721c24"><%= round_time_err%></label>
+      <% } else{ %>
+        <label></label>
+      <% } %>
+    </div>
   </form>
   </body>
 </html>
