--- a/views/program.ejs
+++ b/views/program.ejs
@@ -1,30 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <!-- CSS for Styling -->
-    <link rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-          integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-          crossorigin="anonymous">
+  <title><%= title %></title>
 
-    <!-- JavaScript for Interactivity -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
-            integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-            crossorigin="anonymous"></script>
+  <!-- Custom styles for this template-->
+  <link rel="stylesheet" href="/stylesheets/modrekt.min.css" >
 
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-            integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-            crossorigin="anonymous"></script>
-  </head>
-  <body>
-  <h1><%= title %></h1>
+
+  <!-- Custom fonts for this template-->
+  <link rel="stylesheet" type="text/css" href="/stylesheets/all.min.css" >
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+
+  <!-- JavaScript for Interactivity -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+          crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+          integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+          crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+          integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+          crossorigin="anonymous"></script>
+</head>
+<body id="page-top">
+
+<!-- Page Wrapper -->
+<div id="wrapper">
+
+  <!-- Sidebar -->
+  <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion toggled" id="accordionSidebar">
+
+    <!-- Sidebar - Brand -->
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <div class="sidebar-brand-icon">
+        <img src="/img/regis_icon_1.png" width="50px" height="50px" class="img-responsive">
+      </div>
+      <div class="sidebar-brand-text mx-3">ModRekt</div>
+    </a>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider my-0">
+
+    <!-- Nav Item - Appeal -->
+    <li class="nav-item">
+      <a class="nav-link" href="appeal">
+        <span>Appeal</span></a>
+      <!-- <button type="submit" class="btn btn-primary" onclick="window.location.href='appeal'">Appeal</button> -->
+    </li>
+
+    <!-- Nav Item - Dashboard -->
+    <li class="nav-item">
+      <a class="nav-link" href="dashboard_admin">
+        <span>Dashboard</span></a>
+    </li>
+
+    <!-- Nav Item - Lecture Slot -->
+    <li class="nav-item">
+      <a class="nav-link" href="lecture_slot">
+        <span>Lecture Slot</span></a>
+    </li>
+
+    <!-- Nav Item - Modules -->
+    <li class="nav-item">
+      <a class="nav-link" href="module">
+        <span>Modules</span></a>
+    </li>
+
+    <!-- Nav Item - Prerequisites -->
+    <li class="nav-item">
+      <a class="nav-link" href="prereq">
+        <span>Prerequisites</span></a>
+    </li>
+
+    <!-- Nav Item - Programmes -->
+    <li class="nav-item">
+      <a class="nav-link" href="program">
+        <span>Programmes</span></a>
+    </li>
+
+    <!-- Nav Item - Round -->
+    <li class="nav-item">
+      <a class="nav-link" href="round">
+        <span>Round</span></a>
+    </li>
+
+    <!-- Divider -->
+    <hr class="sidebar-divider">
+
+    <li class="nav-item">
+      <div class="form-group">
+        <form action="logout" role="form" method="post">
+          <button type="submit" class="btn btn-primary"><i class="fas fa-sign-out-alt"></i> <br/> Logout</button>
+        </form>
+      </div>
+    </li>
+
+
+    <!-- Divider -->
+    <hr class="sidebar-divider d-none d-md-block">
+
+    <!-- Sidebar Toggler (Sidebar) -->
+    <!--    <div class="text-center d-none d-md-inline">-->
+    <!--      <button class="rounded-circle border-0" id="sidebarToggle"></button>-->
+    <!--    </div>-->
+
+  </ul>
+  <!-- End of Sidebar -->
+
+  <!-- Content Wrapper -->
+  <div id="content-wrapper" class="d-flex flex-column">
+
+    <!-- Main Content -->
+    <div id="content">
+
+      <!-- Topbar -->
+      <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow">
+
+        <!-- Sidebar Toggle (Topbar) -->
+        <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
+          <i class="fa fa-bars"></i>
+        </button>
+
+        <div class="form-group">
+          <h1><%= title %> </h1>
+          <!--   TODO: add username    -->
+        </div>
+
+
+      </nav>
+      <!-- End of Topbar -->
+
+      <!-- Begin Page Content -->
+      <div class="container-fluid">
+
+
+        <!-- TODO: Add core content here -->
   <div class="form-group">
     <form id="program_form" action="program" role="form" method="post">
       <div class="form-group">
@@ -80,7 +198,46 @@
       <button type="submit" class="btn btn-primary">Logout</button>
     </form>
   </div>
-  </body>
+
+        <!-- /.container-fluid -->
+      </div>
+      <!-- End of Main Content -->
+
+    </div>
+    <!-- End of Content Wrapper -->
+
+    <!-- Footer -->
+    <footer class="sticky-footer bg-white">
+      <div class="container my-auto">
+        <div class="copyright text-center my-auto">
+          <span>Made with <i style="color: red;"class="fas fa-heart"></i> by Team 14</span>
+        </div>
+      </div>
+    </footer>
+    <!-- End of Footer -->
+
+  </div>
+  <!-- End of Page Wrapper -->
+
+
+  <!-- Scroll to Top Button-->
+  <a class="scroll-to-top rounded" href="#page-top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+
+
+  <!-- Bootstrap core JavaScript-->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="javascripts/modrekt.min.js"></script>
+
+</body>
+
   <script>
     $("#table-programs").on('click','#btn-delete',function() {
       const currentRow = $(this).closest("tr"); // get the current row
