Beautify UI: Minor touch up

--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -130,7 +130,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> (<%= username %>)</h1>
         </div>
 
