--- a/views/lecture_slot.ejs
+++ b/views/lecture_slot.ejs
@@ -130,7 +130,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
@@ -200,8 +200,8 @@
   <div class="form-group" id="div-lectures">
     <table class="table" id="table-lectures">
       <caption style="text-align: center;">Lecture Slots</caption>
-      <thead>
-      <tr>
+      <thead class="bg-gradient-primary">
+      <tr style="color: white;">
         <th scope="col">No.</th>
         <th scope="col">Module Code</th>
         <th scope="col">Semester</th>
