--- a/views/prereq.ejs
+++ b/views/prereq.ejs
@@ -129,7 +129,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
@@ -161,8 +161,8 @@
   <div class="form-group" id="div-prereqs">
     <table class="table" id="table-prereqs">
       <caption style="text-align: center;">Prerequisites</caption>
-      <thead>
-      <tr>
+      <thead class="bg-gradient-primary">
+      <tr style="color: white;">
         <th scope="col">No.</th>
         <th scope="col">Module</th>
         <th scope="col">Prerequisite</th>
