--- a/views/register_module.ejs
+++ b/views/register_module.ejs
@@ -129,7 +129,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
 
-                <div class="form-group">
+                <div class="form-group text-center my-auto">
                     <h1><%= title %> </h1>
                     <!--   TODO: add username    -->
                 </div>
@@ -144,8 +144,8 @@
 
                 <!-- TODO: Add core content here -->
     <table class="table" style="text-align: center; margin-top: 30px" id="table_registered">
-        <thead>
-        <tr>
+        <thead class="bg-gradient-primary">
+        <tr style="color: white;">
             <th scope="col">Rank</th>
             <th scope="col">Module Code</th>
             <th scope="col">Day of the Week</th>
