--- a/views/round.ejs
+++ b/views/round.ejs
@@ -129,7 +129,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
@@ -170,11 +170,13 @@
       <button type="submit" class="btn btn-primary btn-block">Submit</button>
     </div>
   </form>
+
+<br />
   <div class="form-group">
     <table class="table" id="table-rounds">
       <caption style="text-align: center;">Rounds</caption>
-      <thead>
-      <tr>
+      <thead class="bg-gradient-primary">
+      <tr style="color: white;">
         <th scope="col">No.</th>
         <th scope="col">Round Start Time</th>
         <th scope="col">Round End Time</th>
