--- a/views/appeal.ejs
+++ b/views/appeal.ejs
@@ -130,7 +130,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
             <!--   TODO: add username    -->
         </div>
@@ -150,8 +150,8 @@
       <div class="form-group" id="div-appeals">
         <table class="table" id="table-appeals">
           <caption style="text-align: center;">Appeals</caption>
-          <thead>
-          <tr>
+          <thead class="bg-gradient-primary">
+          <tr style="color: white;">
             <th scope="col">No.</th>
             <th scope="col">Module Code</th>
             <th scope="col">Semester</th>
