--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -47,7 +47,7 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion toggled" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center">
         <div class="sidebar-brand-icon">
           <img src="/img/regis_icon_1.png" width="50px" height="50px" class="img-responsive">
         </div>
@@ -157,7 +157,7 @@
             <i class="fa fa-bars"></i>
           </button>
 
-          <div class="form-group">
+          <div class="form-group text-center my-auto  ">
             <h1><%= title %> (<%= username %>)</h1>
           </div>
 
@@ -179,8 +179,8 @@
           <div class="form-group" id="div-lects-in-current-round">
             <h5>Lecture Slots to Register in the Current Round</h5>
             <table class="table">
-              <thead>
-              <tr>
+              <thead class="bg-gradient-primary">
+              <tr style="color: white;">
                 <th scope="col">Module Code</th>
                 <th scope="col">Module Name</th>
                 <th scope="col">Sem</th>
