--- a/views/module.ejs
+++ b/views/module.ejs
@@ -130,7 +130,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
@@ -167,8 +167,8 @@
   <div class="form-group">
     <table class="table" id="table-modules">
       <caption style="text-align: center;">Modules</caption>
-      <thead>
-      <tr>
+      <thead class="bg-gradient-primary">
+      <tr style="color: white;">
         <th scope="col">No.</th>
         <th scope="col">Module Code</th>
         <th scope="col">Module Name</th>
