--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -129,7 +129,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
