--- a/views/program.ejs
+++ b/views/program.ejs
@@ -129,7 +129,7 @@
           <i class="fa fa-bars"></i>
         </button>
 
-        <div class="form-group">
+        <div class="form-group text-center my-auto">
           <h1><%= title %> </h1>
           <!--   TODO: add username    -->
         </div>
@@ -169,8 +169,8 @@
   <div class="form-group">
     <table class="table" id="table-programs">
       <caption style="text-align: center;">Programs</caption>
-      <thead>
-      <tr>
+      <thead class="bg-gradient-primary">
+      <tr style="color: white;">
         <th scope="col">No.</th>
         <th scope="col">Programs</th>
       </tr>
