--- a/views/register.ejs
+++ b/views/register.ejs
@@ -93,6 +93,17 @@
         <option value="5">Year 5</option>
       </select>
     </div>
+    <div class="form-group" id="div-program" name="div-program" style="display:none;">
+      <label for="modules">Program</label>
+      <select class="form-control" id="program" name="program" required="required">
+        <option value="" disabled="disabled" selected="selected">Select Program</option>
+        <% programs.forEach(program => { %>
+          <option value="<%= program.prog_name %>">
+            <%= program.prog_name %> <%= program.prog_name %>
+          </option>
+        <% }); %>
+      </select>
+    </div>
     <div class="form-group text-center">
       <a class="d-block small mt-3" href="/login">Return to login</a>
     </div>
@@ -133,14 +144,18 @@
       if (document.getElementById('role').value === 'Student') {
         // Display
         document.getElementById('div-seniority').style.display = "block";
+        document.getElementById('div-program').style.display = "block";
         // Compulsory to be Filled
         document.getElementById('seniority').required = "required";
+        document.getElementById('program').required = "required";
       }
       else if (document.getElementById('role').value === 'Admin') {
         // Hide
         document.getElementById('div-seniority').style.display = "none";
+        document.getElementById('div-program').style.display = "none";
         // Not compulsory to be Filled
         document.getElementById('seniority').required = "";
+        document.getElementById('program').required = "";
       }
     }
   </script>
