--- a/views/past_rounds.ejs
+++ b/views/past_rounds.ejs
@@ -51,44 +51,44 @@
 
     <!-- Nav Item - Appeal -->
     <li class="nav-item">
-      <a class="nav-link" href="../appeal">
+      <a class="nav-link" href="appeal">
         <span>Appeal</span></a>
       <!-- <button type="submit" class="btn btn-primary" onclick="window.location.href='appeal'">Appeal</button> -->
     </li>
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
-      <a class="nav-link" href="../dashboard_admin">
+      <a class="nav-link" href="dashboard_admin">
         <span>Dashboard</span></a>
     </li>
 
     <!-- Nav Item - Lecture Slot -->
     <li class="nav-item">
-      <a class="nav-link" href="../lecture_slot">
+      <a class="nav-link" href="lecture_slot">
         <span>Lecture Slot</span></a>
     </li>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
-      <a class="nav-link" href="../module">
+      <a class="nav-link" href="module">
         <span>Modules</span></a>
     </li>
 
     <!-- Nav Item - Prerequisites -->
     <li class="nav-item">
-      <a class="nav-link" href="../prereq">
+      <a class="nav-link" href="prereq">
         <span>Prerequisites</span></a>
     </li>
 
     <!-- Nav Item - Programmes -->
     <li class="nav-item">
-      <a class="nav-link" href="../program">
+      <a class="nav-link" href="program">
         <span>Programmes</span></a>
     </li>
 
     <!-- Nav Item - Round -->
     <li class="nav-item">
-      <a class="nav-link" href="../round">
+      <a class="nav-link" href="round">
         <span>Round</span></a>
     </li>
 
@@ -97,7 +97,7 @@
 
     <li class="nav-item">
       <div class="form-group">
-        <form action="../logout" role="form" method="post">
+        <form action="logout" role="form" method="post">
           <button type="submit" class="btn btn-primary"><i class="fas fa-sign-out-alt"></i> <br/> Logout</button>
         </form>
       </div>
@@ -143,41 +143,36 @@
 
 
         <!-- TODO: Add core content here -->
-  <div class="form-group" id="div-no-prereqs">
-    <h5 id="h5-no-prereqs">This module has no prerequisites.</h5>
+  <div class="form-group" id="div-no-past-round">
+    <h5>There are currently no past rounds</h5>
   </div>
-  <div class="form-group" id="div-prereqs">
-    <form id="prereq_form" role="form" method="post">
-      <div class="form-group">
-        <label for="parents">Prerequisites</label>
-        <select multiple="multiple" class="form-control" id="parents" name="parents"
-                required="required" size="<%= 1 + (parents.length * 0.5) %>">
-          <% parents.forEach(parent => { %>
-              <option value="<%= parent.mod_code %>">
-                <%= parent.mod_code %> <%= parent.mod_name %>
-              </option>
-          <% }); %>
-        </select>
-      </div>
-      <div>
-        <button type="submit" class="btn btn-primary btn-block"
-                id="btn-prereqs">Submit</button>
-      </div>
-    </form>
+  <div class="form-group" id="div-past-round">
+    <div class="form-group">
+      <label for="parent">Past Round</label>
+      <select class="form-control" id="past_round" name="past_round" required="required">
+        <option value="" disabled="disabled" selected="selected">Select Past Round</option>
+        <% past_rounds.forEach(round => { %>
+          <option value="<%= round.s_time_round %>,<%= round.e_time_round %>">
+            <%= round.s_time_round %> - <%= round.e_time_round %>
+          </option>
+        <% }); %>
+      </select>
+    </div>
+    <div>
+      <button type="submit" class="btn btn-primary btn-block"
+              onclick="submitPastRoundForm()">Submit</button>
+    </div>
   </div>
   <div class="form-group">
     <button type="submit" class="btn btn-primary"
-            onclick="window.location.href='../prereq'">Previous</button>
+            onclick="window.location.href='dashboard_admin'">Back to Home</button>
   </div>
   <div class="form-group">
-    <button type="submit" class="btn btn-primary"
-            onclick="window.location.href='../dashboard_admin'">Back to Home</button>
-  </div>
-  <div class="form-group">
-    <form action="../logout" role="form" method="post">
+    <form action="logout" role="form" method="post">
       <button type="submit" class="btn btn-primary">Logout</button>
     </form>
   </div>
+
 
         <!-- /.container-fluid -->
       </div>
@@ -221,37 +216,32 @@
 
 
 
+<script>
+    function submitPastRoundForm() {
+      const time = document.getElementById('past_round').value;
+      const t = time.split(",");
+      const s_time_round = t[0];
+      const e_time_round = t[1];
+      // Returns false for null, undefined, 0, 000, "", false
+      // Returns true for string "0" and whitespace " "
+      if (Boolean(s_time_round)) {
+        window.location.href='past_rounds/select_round?' +
+                's_time_round=' + s_time_round +
+                '&e_time_round=' + e_time_round;
+      }
+    }
+  </script>
   <script>
     (function() {
       window.addEventListener('load', function() {
-        <% if (parents.length === 0) { %>
-        document.getElementById('div-prereqs').style.display = "none";
-        document.getElementById('div-no-prereqs').style.display = "block";
+        <% if (past_rounds.length === 0) { %>
+        document.getElementById('div-past-round').style.display = "none";
+        document.getElementById('div-no-past-round').style.display = "block";
         <% } else { %>
-        document.getElementById('div-prereqs').style.display = "block";
-        document.getElementById('div-no-prereqs').style.display = "none";
+        document.getElementById('div-past-round').style.display = "block";
+        document.getElementById('div-no-past-round').style.display = "none";
         <% } %>
       });
     })();
-  </script>
-  <script>
-    window.onmousedown = function (event) {
-      var eventTarget = event.target;
-      if (eventTarget.tagName.toLowerCase() === 'option' &&
-              eventTarget.parentNode.hasAttribute('multiple')) {
-        event.preventDefault();
-
-        // toggle selection
-        if (eventTarget.hasAttribute('selected')) {
-          eventTarget.removeAttribute('selected');
-        } else {
-          eventTarget.setAttribute('selected', '');
-        }
-
-        // hack to correct buggy behavior
-        var select = eventTarget.parentNode.cloneNode(true);
-        eventTarget.parentNode.parentNode.replaceChild(select, eventTarget.parentNode);
-      }
-    }
   </script>
 </html>
