--- a/views/dashboard_admin.ejs
+++ b/views/dashboard_admin.ejs
@@ -64,12 +64,12 @@
           <span style="font-size: 1.0em;">Dashboard</span></a>
       </li>
 
-      <!-- Nav Item - Programmes -->
-      <li class="nav-item nav-admin" >
-        <a class="nav-link" href="program">
-          <span style="font-size: 1.0em;">Programmes</span></a>
-      </li>
-
+      <div class="stu-nav-hide1">
+        <!-- Nav Item - Programmes -->
+        <li class="nav-item" >
+          <a class="nav-link" href="program"><span style="font-size: 1.0em;">Programmes</span></a>
+        </li>
+      </div>
 
       <!-- Nav Item - Modules -->
       <li class="nav-item">
@@ -77,35 +77,47 @@
           <span style="font-size: 1.0em;">Modules</span></a>
       </li>
 
+
+      <div class="stu-nav-hide2">
       <!-- Nav Item - Lecture Slot -->
-      <li class="nav-item nav-admin">
+      <li class="nav-item">
         <a class="nav-link" href="lecture_slot">
           <span style="font-size: 1.0em;">Lecture Slot</span></a>
       </li>
 
+
       <!-- Nav Item - Prerequisites -->
-      <li class="nav-item nav-admin">
+      <li class="nav-item">
         <a class="nav-link" href="prereq">
           <span style="font-size: 1.0em;">Prerequisites</span></a>
       </li>
 
       <!-- Nav Item - Round -->
-      <li class="nav-item nav-admin">
+      <li class="nav-item">
         <a class="nav-link" href="round">
           <span style="font-size: 1.0em;">Round</span></a>
       </li>
 
+        <!-- Nav Item - Past Rounds -->
+        <li class="nav-item" >
+          <a class="nav-link" href="past_rounds">
+            <span style="font-size: 1.0em;">Past Rounds</span></a>
+        </li>
+
       <!-- Nav Item - Appeal -->
-      <li class="nav-item nav-admin" >
+      <li class="nav-item" >
         <a class="nav-link" href="appeal">
           <span style="font-size: 1.0em;">Appeal</span></a>
       </li>
+      </div>
 
-      <!-- Nav Item - register_module -->
-      <li class="nav-item" >
-        <a class="nav-link" href="register_module">
-          <span style="font-size: 1.0em;">Register Module</span></a>
-      </li>
+      <div class="adm-nav-hide1">
+        <!-- Nav Item - register_module -->
+        <li class="nav-item" >
+          <a class="nav-link" href="register_module">
+            <span style="font-size: 1.0em;">Register Module</span></a>
+        </li>
+      </div>
 
       <li class="nav-item">
         <div class="form-group">
@@ -199,7 +211,7 @@
 <!--                    onclick="window.location.href='dashboard_admin/allocate'">Allocate</button>-->
 <!--          </div>-->
           <div class="form-group">
-            <button type="submit" class="btn btn-primary"
+            <button type="submit" class="btn btn-info"
                     onclick="window.location.href='past_rounds'">View Past Rounds</button>
           </div>
           <div class="form-group">
@@ -286,11 +298,19 @@
     })();
   </script>
 
-<script>
-  (function() {
-    window.addEventListener('load', function() {
+  <script>
+    (function() {
+      window.addEventListener('load', function() {
+        var roleType = "<%= role %>";
+        if (roleType === 'Student') {
+          document.getElementsByClassName('stu-nav-hide1')[0].remove();
+          document.getElementsByClassName('stu-nav-hide2')[0].remove();
+        }
 
-    });
-  })();
-</script>
+        if (roleType === 'Admin') {
+         document.getElementsByClassName('adm-nav-hide1')[0].remove();
+        }
+      });
+    })();
+  </script>
 </html>
