--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -50,19 +50,18 @@
     <li class="nav-item">
       <h4 style="color: white;"><%= username %></h4>
     </li>
-
     <!-- Nav Item - Dashboard -->
     <li class="nav-item">
       <a class="nav-link" href="dashboard_admin">
         <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
 
-    <!-- Nav Item - Programmes -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="program">
-        <span style="font-size: 1.0em;">Programmes</span></a>
-    </li>
-
+    <div class="stu-nav-hide1">
+      <!-- Nav Item - Programmes -->
+      <li class="nav-item" >
+        <a class="nav-link" href="program"><span style="font-size: 1.0em;">Programmes</span></a>
+      </li>
+    </div>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
@@ -70,35 +69,41 @@
         <span style="font-size: 1.0em;">Modules</span></a>
     </li>
 
-    <!-- Nav Item - Lecture Slot -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="lecture_slot">
-        <span style="font-size: 1.0em;">Lecture Slot</span></a>
-    </li>
 
-    <!-- Nav Item - Prerequisites -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="prereq">
-        <span style="font-size: 1.0em;">Prerequisites</span></a>
-    </li>
+    <div class="stu-nav-hide2">
+      <!-- Nav Item - Lecture Slot -->
+      <li class="nav-item">
+        <a class="nav-link" href="lecture_slot">
+          <span style="font-size: 1.0em;">Lecture Slot</span></a>
+      </li>
 
-    <!-- Nav Item - Round -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="round">
-        <span style="font-size: 1.0em;">Round</span></a>
-    </li>
 
-    <!-- Nav Item - Appeal -->
-    <li class="nav-item nav-admin" >
-      <a class="nav-link" href="appeal">
-        <span style="font-size: 1.0em;">Appeal</span></a>
-    </li>
+      <!-- Nav Item - Prerequisites -->
+      <li class="nav-item">
+        <a class="nav-link" href="prereq">
+          <span style="font-size: 1.0em;">Prerequisites</span></a>
+      </li>
 
-    <!-- Nav Item - register_module -->
-    <li class="nav-item" >
-      <a class="nav-link" href="register_module">
-        <span style="font-size: 1.0em;">Register Module</span></a>
-    </li>
+      <!-- Nav Item - Round -->
+      <li class="nav-item">
+        <a class="nav-link" href="round">
+          <span style="font-size: 1.0em;">Round</span></a>
+      </li>
+
+      <!-- Nav Item - Appeal -->
+      <li class="nav-item" >
+        <a class="nav-link" href="appeal">
+          <span style="font-size: 1.0em;">Appeal</span></a>
+      </li>
+    </div>
+
+    <div class="adm-nav-hide1">
+      <!-- Nav Item - register_module -->
+      <li class="nav-item" >
+        <a class="nav-link" href="register_module">
+          <span style="font-size: 1.0em;">Register Module</span></a>
+      </li>
+    </div>
 
     <li class="nav-item">
       <div class="form-group">
@@ -337,5 +342,22 @@
     });
   })();
 </script>
+
+<script>
+  (function() {
+    window.addEventListener('load', function() {
+      var roleType = "<%= role %>";
+      if (roleType === 'Student') {
+        document.getElementsByClassName('stu-nav-hide1')[0].remove();
+        document.getElementsByClassName('stu-nav-hide2')[0].remove();
+      }
+
+      if (roleType === 'Admin') {
+        document.getElementsByClassName('adm-nav-hide1')[0].remove();
+      }
+    });
+  })();
+</script>
+
 </html>
 
