--- a/views/module.ejs
+++ b/views/module.ejs
@@ -48,7 +48,7 @@
     </a>
 
     <li class="nav-item">
-      <!--      TODO: Add username -->
+      <h4 style="color: white;"><%= username %></h4>
     </li>
 
     <!-- Nav Item - Dashboard -->
@@ -57,12 +57,12 @@
         <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
 
-    <!-- Nav Item - Programmes -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="program">
-        <span style="font-size: 1.0em;">Programmes</span></a>
-    </li>
-
+    <div class="stu-nav-hide1">
+      <!-- Nav Item - Programmes -->
+      <li class="nav-item" >
+        <a class="nav-link" href="program"><span style="font-size: 1.0em;">Programmes</span></a>
+      </li>
+    </div>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
@@ -70,35 +70,47 @@
         <span style="font-size: 1.0em;">Modules</span></a>
     </li>
 
-    <!-- Nav Item - Lecture Slot -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="lecture_slot">
-        <span style="font-size: 1.0em;">Lecture Slot</span></a>
-    </li>
 
-    <!-- Nav Item - Prerequisites -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="prereq">
-        <span style="font-size: 1.0em;">Prerequisites</span></a>
-    </li>
+    <div class="stu-nav-hide2">
+      <!-- Nav Item - Lecture Slot -->
+      <li class="nav-item">
+        <a class="nav-link" href="lecture_slot">
+          <span style="font-size: 1.0em;">Lecture Slot</span></a>
+      </li>
 
-    <!-- Nav Item - Round -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="round">
-        <span style="font-size: 1.0em;">Round</span></a>
-    </li>
 
-    <!-- Nav Item - Appeal -->
-    <li class="nav-item nav-admin" >
-      <a class="nav-link" href="appeal">
-        <span style="font-size: 1.0em;">Appeal</span></a>
-    </li>
+      <!-- Nav Item - Prerequisites -->
+      <li class="nav-item">
+        <a class="nav-link" href="prereq">
+          <span style="font-size: 1.0em;">Prerequisites</span></a>
+      </li>
 
-    <!-- Nav Item - register_module -->
-    <li class="nav-item" >
-      <a class="nav-link" href="register_module">
-        <span style="font-size: 1.0em;">Register Module</span></a>
-    </li>
+      <!-- Nav Item - Round -->
+      <li class="nav-item">
+        <a class="nav-link" href="round">
+          <span style="font-size: 1.0em;">Round</span></a>
+      </li>
+
+      <!-- Nav Item - Past Rounds -->
+      <li class="nav-item" >
+        <a class="nav-link" href="past_rounds">
+          <span style="font-size: 1.0em;">Past Rounds</span></a>
+      </li>
+
+      <!-- Nav Item - Appeal -->
+      <li class="nav-item" >
+        <a class="nav-link" href="appeal">
+          <span style="font-size: 1.0em;">Appeal</span></a>
+      </li>
+    </div>
+
+    <div class="adm-nav-hide1">
+      <!-- Nav Item - register_module -->
+      <li class="nav-item" >
+        <a class="nav-link" href="register_module">
+          <span style="font-size: 1.0em;">Register Module</span></a>
+      </li>
+    </div>
 
     <li class="nav-item">
       <div class="form-group">
@@ -141,21 +153,27 @@
         <!-- TODO: Add core content here -->
   <div class="form-group">
     <form id="module_form" action="module" role="form" method="post">
+
+
       <div class="form-group">
         <label style="font-weight:bold;font-size:larger;">Module Info</label>
-        <div class="form-group" id="div-mod-code">
-          <label for="mod_code">Module Code</label>
-          <input type="text" class="form-control" id="mod_code" name="mod_code"
-                 placeholder="Enter Module Code" required="required">
-        </div>
-        <div class="form-group" id="div-mod-name">
-          <label for="mod_name">Module Name</label>
-          <input type="text" class="form-control" id="mod_name" name="mod_name"
-                 placeholder="Enter Module Name" required="required">
+        <div class="form-row">
+          <div class="form-group col" id="div-mod-code">
+            <label for="mod_code">Module Code</label>
+            <input type="text" class="form-control" id="mod_code" name="mod_code"
+                   placeholder="Enter Module Code" required="required">
+          </div>
+          <div class="form-group col" id="div-mod-name">
+            <label for="mod_name">Module Name</label>
+            <input type="text" class="form-control" id="mod_name" name="mod_name"
+                   placeholder="Enter Module Name" required="required">
+          </div>
         </div>
       </div>
+
+
       <div id="btn-submit">
-        <button type="submit" class="btn btn-primary btn-block">Submit</button>
+        <button type="submit" class="btn btn-info">Submit</button>
       </div>
     </form>
   </div>
@@ -250,4 +268,21 @@
       }
     }
   </script>
+
+
+<script>
+  (function() {
+    window.addEventListener('load', function() {
+      var roleType = "<%= role %>";
+      if (roleType === 'Student') {
+        document.getElementsByClassName('stu-nav-hide1')[0].remove();
+        document.getElementsByClassName('stu-nav-hide2')[0].remove();
+      }
+
+      if (roleType === 'Admin') {
+        document.getElementsByClassName('adm-nav-hide1')[0].remove();
+      }
+    });
+  })();
+</script>
 </html>
