--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -49,53 +49,67 @@
     <li class="nav-item">
       <h4 style="color: white;"><%= username %></h4>
 
-      <a class="nav-link" href="../appeal">
-        <span>Appeal</span></a>
-      <!-- <button type="submit" class="btn btn-primary" onclick="window.location.href='appeal'">Appeal</button> -->
-    </li>
-
-    <!-- Nav Item - Dashboard -->
+      <!-- Nav Item - Dashboard -->
     <li class="nav-item">
       <a class="nav-link" href="../dashboard_admin">
-        <span>Dashboard</span></a>
+        <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
 
-    <!-- Nav Item - Lecture Slot -->
-    <li class="nav-item">
-      <a class="nav-link" href="../lecture_slot">
-        <span>Lecture Slot</span></a>
-    </li>
-
+    <div class="stu-nav-hide1">
+      <!-- Nav Item - Programmes -->
+      <li class="nav-item" >
+        <a class="nav-link" href="../program"><span style="font-size: 1.0em;">Programmes</span></a>
+      </li>
+    </div>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
       <a class="nav-link" href="../module">
-        <span>Modules</span></a>
+        <span style="font-size: 1.0em;">Modules</span></a>
     </li>
 
-    <!-- Nav Item - Prerequisites -->
-    <li class="nav-item">
-      <a class="nav-link" href="../prereq">
-        <span>Prerequisites</span></a>
-    </li>
 
-    <!-- Nav Item - Programmes -->
-    <li class="nav-item">
-      <a class="nav-link" href="../program">
-        <span>Programmes</span></a>
-    </li>
+    <div class="stu-nav-hide2">
+      <!-- Nav Item - Lecture Slot -->
+      <li class="nav-item">
+        <a class="nav-link" href="../lecture_slot">
+          <span style="font-size: 1.0em;">Lecture Slot</span></a>
+      </li>
 
-    <!-- Nav Item - Round -->
-    <li class="nav-item">
-      <a class="nav-link" href="../round">
-        <span>Round</span></a>
-    </li>
 
-    <!-- Nav Item - register_module -->
-    <li class="nav-item" >
-      <a class="nav-link" href="register_module">
-        <span style="font-size: 1.0em;">Register Module</span></a>
-    </li>
+      <!-- Nav Item - Prerequisites -->
+      <li class="nav-item">
+        <a class="nav-link" href="../prereq">
+          <span style="font-size: 1.0em;">Prerequisites</span></a>
+      </li>
+
+      <!-- Nav Item - Round -->
+      <li class="nav-item">
+        <a class="nav-link" href="../round">
+          <span style="font-size: 1.0em;">Round</span></a>
+      </li>
+
+      <!-- Nav Item - Past Rounds -->
+      <li class="nav-item" >
+        <a class="nav-link" href="../past_rounds">
+          <span style="font-size: 1.0em;">Past Rounds</span></a>
+      </li>
+
+      <!-- Nav Item - Appeal -->
+      <li class="nav-item" >
+        <a class="nav-link" href="../appeal">
+          <span style="font-size: 1.0em;">Appeal</span></a>
+      </li>
+
+    </div>
+
+    <div class="adm-nav-hide1">
+      <!-- Nav Item - register_module -->
+      <li class="nav-item" >
+        <a class="nav-link" href="../register_module">
+          <span style="font-size: 1.0em;">Register Module</span></a>
+      </li>
+    </div>
 
     <li class="nav-item">
       <div class="form-group">
@@ -153,7 +167,7 @@
         </select>
       </div>
       <div>
-        <button type="submit" class="btn btn-primary btn-block"
+        <button type="submit" class="btn btn-primary"
                 id="btn-prereqs">Submit</button>
       </div>
     </form>
