--- a/views/round.ejs
+++ b/views/round.ejs
@@ -47,7 +47,7 @@
     </a>
 
     <li class="nav-item">
-      <!--      TODO: Add username -->
+      <h4 style="color: white;"><%= username %></h4>
     </li>
 
     <!-- Nav Item - Dashboard -->
@@ -56,12 +56,12 @@
         <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
 
-    <!-- Nav Item - Programmes -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="program">
-        <span style="font-size: 1.0em;">Programmes</span></a>
-    </li>
-
+    <div class="stu-nav-hide1">
+      <!-- Nav Item - Programmes -->
+      <li class="nav-item" >
+        <a class="nav-link" href="program"><span style="font-size: 1.0em;">Programmes</span></a>
+      </li>
+    </div>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
@@ -69,35 +69,47 @@
         <span style="font-size: 1.0em;">Modules</span></a>
     </li>
 
-    <!-- Nav Item - Lecture Slot -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="lecture_slot">
-        <span style="font-size: 1.0em;">Lecture Slot</span></a>
-    </li>
 
-    <!-- Nav Item - Prerequisites -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="prereq">
-        <span style="font-size: 1.0em;">Prerequisites</span></a>
-    </li>
+    <div class="stu-nav-hide2">
+      <!-- Nav Item - Lecture Slot -->
+      <li class="nav-item">
+        <a class="nav-link" href="lecture_slot">
+          <span style="font-size: 1.0em;">Lecture Slot</span></a>
+      </li>
 
-    <!-- Nav Item - Round -->
-    <li class="nav-item nav-admin">
-      <a class="nav-link" href="round">
-        <span style="font-size: 1.0em;">Round</span></a>
-    </li>
 
-    <!-- Nav Item - Appeal -->
-    <li class="nav-item nav-admin" >
-      <a class="nav-link" href="appeal">
-        <span style="font-size: 1.0em;">Appeal</span></a>
-    </li>
+      <!-- Nav Item - Prerequisites -->
+      <li class="nav-item">
+        <a class="nav-link" href="prereq">
+          <span style="font-size: 1.0em;">Prerequisites</span></a>
+      </li>
 
-    <!-- Nav Item - register_module -->
-    <li class="nav-item" >
-      <a class="nav-link" href="register_module">
-        <span style="font-size: 1.0em;">Register Module</span></a>
-    </li>
+      <!-- Nav Item - Round -->
+      <li class="nav-item">
+        <a class="nav-link" href="round">
+          <span style="font-size: 1.0em;">Round</span></a>
+      </li>
+
+      <!-- Nav Item - Past Rounds -->
+      <li class="nav-item" >
+        <a class="nav-link" href="past_rounds">
+          <span style="font-size: 1.0em;">Past Rounds</span></a>
+      </li>
+
+      <!-- Nav Item - Appeal -->
+      <li class="nav-item" >
+        <a class="nav-link" href="appeal">
+          <span style="font-size: 1.0em;">Appeal</span></a>
+      </li>
+    </div>
+
+    <div class="adm-nav-hide1">
+      <!-- Nav Item - register_module -->
+      <li class="nav-item" >
+        <a class="nav-link" href="register_module">
+          <span style="font-size: 1.0em;">Register Module</span></a>
+      </li>
+    </div>
 
     <li class="nav-item">
       <div class="form-group">
@@ -139,30 +151,34 @@
 
         <!-- TODO: Add core content here -->
   <form id="round_form" action="round" role="form" method="post">
-    <div class="form-group">
-      <label for="reg_start">Registration Start Date</label>
-      <div class="form-group">
-        <input type="date" class="form-control" id="reg_start_date"
-               name="reg_start_date" required="required">
+    <div class="form-row">
+      <div class="form-group col">
+        <label for="reg_start">Registration Start Date</label>
+        <div class="form-group">
+          <input type="date" class="form-control" id="reg_start_date"
+                 name="reg_start_date" required="required">
+        </div>
+        <div class="form-group">
+          <input type="time" class="form-control" id="reg_start_time"
+                 name="reg_start_time" required="required">
+        </div>
       </div>
-      <div class="form-group">
-        <input type="time" class="form-control" id="reg_start_time"
-               name="reg_start_time" required="required">
+
+      <div class="form-group col">
+        <label for="reg_end">Registration End Date</label>
+        <div class="form-group">
+          <input type="date" class="form-control" id="reg_end_date"
+                 name="reg_end_date" required="required">
+        </div>
+        <div class="form-group">
+          <input type="time" class="form-control" id="reg_end_time"
+                 name="reg_end_time" required="required">
+        </div>
       </div>
     </div>
-    <div class="form-group">
-      <label for="reg_end">Registration End Date</label>
-      <div class="form-group">
-        <input type="date" class="form-control" id="reg_end_date"
-               name="reg_end_date" required="required">
-      </div>
-      <div class="form-group">
-        <input type="time" class="form-control" id="reg_end_time"
-               name="reg_end_time" required="required">
-      </div>
-    </div>
+
     <div>
-      <button type="submit" class="btn btn-primary btn-block">Submit</button>
+      <button type="submit" class="btn btn-info">Submit</button>
     </div>
   </form>
 
@@ -241,4 +257,21 @@
       });
     })();
   </script>
+
+
+<script>
+  (function() {
+    window.addEventListener('load', function() {
+      var roleType = "<%= role %>";
+      if (roleType === 'Student') {
+        document.getElementsByClassName('stu-nav-hide1')[0].remove();
+        document.getElementsByClassName('stu-nav-hide2')[0].remove();
+      }
+
+      if (roleType === 'Admin') {
+        document.getElementsByClassName('adm-nav-hide1')[0].remove();
+      }
+    });
+  })();
+</script>
 </html>
