Fix spacing between nav item "Programmes" & "Modules"

--- a/views/prereq_child.ejs
+++ b/views/prereq_child.ejs
@@ -55,12 +55,10 @@
         <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
 
-    <div class="stu-nav-hide1">
       <!-- Nav Item - Programmes -->
-      <li class="nav-item" >
+      <li class="stu-nav-hide1 nav-item" >
         <a class="nav-link" href="../program"><span style="font-size: 1.0em;">Programmes</span></a>
       </li>
-    </div>
 
     <!-- Nav Item - Modules -->
     <li class="nav-item">
