--- a/views/dashboard_student.ejs
+++ b/views/dashboard_student.ejs
@@ -55,20 +55,11 @@
       <a class="nav-link" href="dashboard_admin">
         <span style="font-size: 1.0em;">Dashboard</span></a>
     </li>
-
-    <div class="stu-nav-hide1">
+    
       <!-- Nav Item - Programmes -->
-      <li class="nav-item" >
+      <li class="stu-nav-hide1 nav-item" >
         <a class="nav-link" href="program"><span style="font-size: 1.0em;">Programmes</span></a>
       </li>
-    </div>
-
-<!--    &lt;!&ndash; Nav Item - Modules &ndash;&gt;-->
-<!--    <li class="nav-item">-->
-<!--      <a class="nav-link" href="module">-->
-<!--        <span style="font-size: 1.0em;">Modules</span></a>-->
-<!--    </li>-->
-
 
     <div class="stu-nav-hide2">
       <!-- Nav Item - Lecture Slot -->
